--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,36 @@
     <groupId>com.iblazhchuk</groupId>
     <artifactId>movieland</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>10.0.6</version>
+            </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.flywaydb</groupId>-->
+<!--                <artifactId>flyway-maven-plugin</artifactId>-->
+<!--                <version>7.13.0</version>-->
+<!--                <configuration>-->
+<!--                    <url>jdbc:mariadb://localhost:3306/local_db</url>-->
+<!--                    <user>local_user</user>-->
+<!--                    <password>local_password</password>-->
+<!--                    <schemas>-->
+<!--                        <schema>local_db</schema>-->
+<!--                    </schemas>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -29,6 +54,12 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>2.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
