--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-dataSource.jdbc_url=jdbc:mariadb://localhost:3306/local_db
+dataSource.jdbc_url=jdbc:mariadb://localhost:3306/db_movieland
 dataSource.database_username=root
 dataSource.database_password=root
