delete class DataSource.java. Create bean "DataSource" in aplication context.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-dataSource.jdbc_url=jdbc:mariadb://localhost:3306/local_db
-dataSource.database_username=root
-dataSource.database_password=root
+dataSource.jdbcurl=jdbc:mariadb://localhost:3306/local_db
+dataSource.jdbcdriverclassName=org.mariadb.jdbc.Driver
+dataSource.databaseusername=root
+dataSource.databasepassword=root
