--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-dataSource.jdbcurl=jdbc:mariadb://localhost:3306/local_db
+dataSource.jdbcurl=jdbc:mariadb://localhost:3306/db_movieland
 dataSource.jdbcdriverclassName=org.mariadb.jdbc.Driver
 dataSource.databaseusername=root
 dataSource.databasepassword=root
